# minecraft-watcher

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  vm-control-script.ps1
.github/workflows/: check-lint-format.yml  test.yml
src/minecraft_watcher/: __init__.py  __main__.py  cli.py  settings.py  utils.py  watch.py
tests/: test_minecraft_watcher.py
